syntax = "proto3";

package category.v1;

option go_package = "github.com/titan-commerce/backend/category-service/proto/category/v1;categoryv1";

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc GetCategoryTree(GetCategoryTreeRequest) returns (GetCategoryTreeResponse);
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
  string parent_id = 3; // Optional
  string image_url = 4;
}

message CreateCategoryResponse {
  Category category = 1;
}

message GetCategoryRequest {
  string id = 1;
}

message GetCategoryResponse {
  Category category = 1;
}

message ListCategoriesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
  int32 total = 2;
}

message GetCategoryTreeRequest {}

message GetCategoryTreeResponse {
  repeated CategoryNode roots = 1;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  string image_url = 5;
}

message CategoryNode {
  Category category = 1;
  repeated CategoryNode children = 2;
}
